--- a/src/assets/content/privacypolicy/eng.html
+++ b/src/assets/content/privacypolicy/eng.html
@@ -1,54 +1,93 @@
-Data Protection Policy
-The ISEEQ Korlátolt Felelősségű Társaság (registered seat: 1075 Budapest, Madách Imre út 13-14. Madách Trade C. ép. B. lház. 7. em.); company registration number: Cg.01-09-989390; “ISEEQ”) hereby informs the job seekers, candidates whose personal data ISEEQ controls in the course of its recruitment activities (“Candidates”) on the personal data controlled by ISEEQ, the principles and practice of such data controlling and the rights and remedies of the Candidates in relation thereto.
+<h1 style="text-align:center">Data Protection Policy</h1>
 
-The scope of the personal data, the purpose of and the duration of the data controlling
-The purpose of the controlling of the personal data of the Candidates is the recruitment of the Candidates to the clients of ISEEQ. The Candidate may give consent to the controlling of personal data in respect of a specific job vacancy or in general for recruitment purposes.
+<p>The <b>ISEEQ Korlátolt Felelősségű Társaság</b> (registered seat: 1075 Budapest, Madách Imre út 13-14. Madách Trade C. ép. B. lház. 7. em.); company registration n
+    umber: Cg.01-09-989390; “ISEEQ”) hereby informs the job seekers, candidates whose personal data ISEEQ controls in the course of its 
+    recruitment activities (“Candidates”) on the personal data controlled by ISEEQ, the principles and practice of such data controlling and the 
+    rights and remedies of the Candidates in relation thereto.</p>
 
-ISEEQ may send newsletters to the Candidates based on the expressed consent of the respective Candidate.
+<h2 style="text-align:center">The scope of the personal data, the purpose of and the duration of the data controlling</h2>
+<p>The purpose of the controlling of the personal data of the Candidates is the recruitment of the Candidates to the clients of ISEEQ. 
+    The Candidate may give consent to the controlling of personal data in respect of a specific job vacancy or in general for recruitment purposes.</p>
 
-ISEEQ controls the following personal data of the Candidates:
+<p>ISEEQ may send newsletters to the Candidates based on the expressed consent of the respective Candidate.</p>
 
-Full name, email, mobile phone number, address, workplace, position / studies, age, nationality, Linkedin profile ID, CV, language skills, professional skills, education background, honours/awards, when is the earliest start date for the new position, if the Candidate bound by non-compete undertaking, current salary, salary expectations, if the Candidate is bound by a student agreement. For specific job vacancies further information/personal data might be provided, with the consent of the Candidate.
+<p>ISEEQ controls the following personal data of the Candidates:</p>
 
-ISEEQ does not control sensitive, special category data, only when it is needed for specific job opening and always subject to the prior consent of the Candidate.
+<p>Full name, email, mobile phone number, address, workplace, position / studies, age, nationality, Linkedin profile ID, CV, language skills, 
+    professional skills, education background, honours/awards, when is the earliest start date for the new position, if the Candidate bound 
+    by non-compete undertaking, current salary, salary expectations, if the Candidate is bound by a student agreement. For specific job vacancies 
+    further information/personal data might be provided, with the consent of the Candidate.</p>
 
-ISEEQ controls personal data of the Candidates until request for erasure by the Candidate, or maximum until the time necessary for the purpose of the data controlling, which occurs earlier. The ISEEQ revises regularly if the controlled personal data is necessary for the performance of its purpose.
+<p>ISEEQ does not control sensitive, special category data, only when it is needed for specific job opening and always subject to the prior consent 
+    of the Candidate.</p>
 
-ISEEQ makes its best effort to keep up-to-date personal data of the Candidates. In order to ensure this goal, the ISEEQ encourages the Candidates to notify ISEEQ on the change of their personal data provided to ISEEQ. ISEEQ also contacts the Candidate from time to time to update the personal data of the Candidates controlled by ISEEQ either by e-mail or phone call.
+<p>ISEEQ controls personal data of the Candidates until request for erasure by the Candidate, or maximum until the time necessary for the purpose
+     of the data controlling, which occurs earlier. The ISEEQ revises regularly if the controlled personal data is necessary for the performance
+      of its purpose.</p>
 
-The legal basis of the data controlling
-The legal basis of the data controlling is the consent of the Candidate as data subject under Article 5 (1) a.) of Act CXII of 2011 on the Right to Informational Self-determination and Freedom of Information (“Data Protection Act”). The personnel of ISEEQ may contact potential Candidates based on their publicly available contact data in order to obtain the consent of the potential Candidate to control his/her personal data for the purposes and manner set out in this Policy. The legal basis of such contact is the legitimate interest of the ISEEQ based on Article 6 (1) b.) of the Data Protection Act.
+<p>ISEEQ makes its best effort to keep up-to-date personal data of the Candidates. In order to ensure this goal, the ISEEQ encourages the Candidates 
+    to notify ISEEQ on the change of their personal data provided to ISEEQ. ISEEQ also contacts the Candidate from time to time to update the personal
+     data of the Candidates controlled by ISEEQ either by e-mail or phone call.</p>
 
-Following the registration at the www.iseeq.hu website as a jobseeker and/or providing the data under Section 1 to ISEEQ in any form (by phone/e-mail) ISEEQ will request the expressed consents to the controlling of his/her personal data in line with this policy, in the absence of such consent ISEEQ will not process such the data.
+<h2 style="text-align:center">The legal basis of the data controlling</h2>
+<p>The legal basis of the data controlling is the consent of the Candidate as data subject under Article 5 (1) a.) of Act CXII of 2011 on the Right 
+    to Informational Self-determination and Freedom of Information (“Data Protection Act”). The personnel of ISEEQ may contact potential Candidates 
+    based on their publicly available contact data in order to obtain the consent of the potential Candidate to control his/her personal data for 
+    the purposes and manner set out in this Policy. The legal basis of such contact is the legitimate interest of the ISEEQ based on Article 6 (1)
+     b.) of the Data Protection Act.</p>
 
-Access to data, data transfer, security, data processing
-The personnel of ISEEQ have access to the personal data. The personnel of the ISEEQ may contact you to inform you about new job vacancies or update your personal data controlled by the ISEEQ.
+<p>Following the registration at the www.iseeq.hu website as a jobseeker and/or providing the data under Section 1 to ISEEQ in any form 
+    (by phone/e-mail) ISEEQ will request the expressed consents to the controlling of his/her personal data in line with this policy, in the
+     absence of such consent ISEEQ will not process such the data.</p>
 
-The ISEEQ transfer the personal data of the Candidate to those client(s) of the ISEEQ that has openings for positions that the Candidate applies to. The ISEEQ transfers the personal data of the Candidate to its client with the specific consent of the Candidate given either by phone verbally or by e-mail. Some client(s) of ISEEQ may reside outside the EU, in such case ISEEQ informs the Candidate on the country where the personal data of the Candidate would be transferred, and only transfers the personal data of the Candidate based on his/her specific consent for this data transfer.
+<h2 style="text-align:center">Access to data, data transfer, security, data processing</h2>
 
-The ISEEQ processes the personal data by automatized methods and uses the following data processing services:
+<p>The personnel of ISEEQ have access to the personal data. The personnel of the ISEEQ may contact you to inform you about new job vacancies or
+     update your personal data controlled by the ISEEQ.</p>
 
-HRSzoftver (https://hrszoftver.hu/).
+<p>The ISEEQ transfer the personal data of the Candidate to those client(s) of the ISEEQ that has openings for positions that the Candidate 
+    applies to. The ISEEQ transfers the personal data of the Candidate to its client with the specific consent of the Candidate given either 
+    by phone verbally or by e-mail. Some client(s) of ISEEQ may reside outside the EU, in such case ISEEQ informs the Candidate on the country 
+    where the personal data of the Candidate would be transferred, and only transfers the personal data of the Candidate based on his/her 
+    specific consent for this data transfer.</p>
 
-The ISEEQ stores the personal data in the servers of HRSzoftver (https://hrszoftver.hu. HRSzoftver performs tests regularly on the security systems of its servers. HRSzoftver fixes the discovered defects without delay, its software applies state of the art security solutions in order to ensure that not only its servers but also its software is protected against intrusion. Double factor authentication, the user identification solution and the software’s data transfer functions ensure the security of the stored data.
+<p>The ISEEQ processes the personal data by automatized methods and uses the following data processing services:</p>
 
-ISEEQ acts with the outmost care in order to prevent data protection incidents. In the case of any data protection incidents, ISEEQ provides maximum transparency to the Candidates and the acting authorities.
+<p>HRSzoftver (https://hrszoftver.hu/).</p>
 
-Cookies
-The www.iseeq.hu website does not use cookies.
+<p>The ISEEQ stores the personal data in the servers of HRSzoftver (https://hrszoftver.hu. HRSzoftver performs tests regularly on the 
+    security systems of its servers. HRSzoftver fixes the discovered defects without delay, its software applies state of the art security 
+    solutions in order to ensure that not only its servers but also its software is protected against intrusion. Double factor 
+    authentication, the user identification solution and the software’s data transfer functions ensure the security of the stored data.</p>
 
-Rights and remedies
-The Candidate may object to the controlling of his personal data even after providing them, the Candidate may request correction of the provided personal data, may request further information on the controlling of his/her personal data and may also request the transfer of his/her personal data to a third party. If the Candidate request deletion or correction of its personal data, ISEEQ will arrange without delay the deletion or correction of the transferred personal data. Following the erasure of the requested data, ISEEQ does not have access to such data, the fact of the erasure is recorded by HRSzoftver (https://hrszoftver.hu/).
+<p>ISEEQ acts with the outmost care in order to prevent data protection incidents. In the case of any data protection incidents, ISEEQ 
+    provides maximum transparency to the Candidates and the acting authorities.</p>
 
-In case of infringement of personal data, under the Data Protection Act and the Civil Code (act V of 2013) the Candidate may:
+<h2 style="text-align:center">Cookies</h2>
+<p>The www.iseeq.hu website does not use cookies.</p>
 
-i. turn to the Hungarian National Authority for Data Protection and Freedom of Information; (seat: 1125 Budapest, Szilágyi Erzsébet fasor 22/c.; postal address: 1530 Budapest, Pf.: 5.; e-mail: ugyfelszolgalat@naih.hu; telefon: +36 (1) 391-1400; honlap: www.naih.hu), or
-ii. file a statement of claim at the competent court at his/her address.
-Before turning to the Hungarian National Authority for Data Protection and Freedom of Information or filing a statement of claim before court please get in contact with ISEEQ at the details written in Section 6 in order to have your complaint examined and solved as soon as possible.
+<h2 style="text-align:center">Rights and remedies</h2>
+<p>The Candidate may object to the controlling of his personal data even after providing them, the Candidate may request correction of the 
+    provided personal data, may request further information on the controlling of his/her personal data and may also request the transfer 
+    of his/her personal data to a third party. If the Candidate request deletion or correction of its personal data, ISEEQ will arrange without 
+    delay the deletion or correction of the transferred personal data. Following the erasure of the requested data, ISEEQ does not have access
+     to such data, the fact of the erasure is recorded by HRSzoftver (https://hrszoftver.hu/).</p>
 
-Contact details of ISEEQ
-Address: 1075 Budapest, Madách Imre út 13-14. Madách Trade C. ép. B. lház. 7. em.;
+<p>In case of infringement of personal data, under the Data Protection Act and the Civil Code (act V of 2013) the Candidate may:</p>
 
-E-mail: privacypolicy@iseeq.hu
+<p>I. turn to the Hungarian National Authority for Data Protection and Freedom of Information; (seat: 1125 Budapest, Szilágyi Erzsébet
+     fasor 22/c.; postal address: 1530 Budapest, Pf.: 5.; e-mail: ugyfelszolgalat@naih.hu; telefon: +36 (1) 391-1400; honlap: www.naih.hu),
+      or
+<p>II. file a statement of claim at the competent court at his/her address.</p>
+<p>Before turning to the Hungarian National Authority for Data Protection and Freedom of Information or filing a statement of claim before court
+     please get in contact with ISEEQ at the details written in Section 6 in order to have your complaint examined and solved as soon as possible.</p>
+    
+<div style="text-align:center">
+<h2>Contact details of ISEEQ</h2>
+<p>Address: 1075 Budapest, Madách Imre út 13-14. Madách Trade C. ép. B. lház. 7. em.;</p>
 
-The ISEEQ reserves the right to change the Policy, or to modify it according to the changes in European Union law or in the Hungarian law. The ISEEQ informs the Candidates in e-mail about such changes.
+<p>E-mail: privacypolicy@iseeq.hu</p>
+
+<p><i>The ISEEQ reserves the right to change the Policy, or to modify it according to the changes in European Union law or in the
+     Hungarian law. The ISEEQ informs the Candidates in e-mail about such changes.</i></p>
+</div>
